# pythonbible-parser

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-package.yml
pythonbible_parser/: CHANGELOG.md  __init__.py  bible.py  bible_parser.py  errors.py  formatter.py  json_converter.py
pythonbible_parser/osis/: constants.py  old_osis_parser.py  osis_book_parser.py  osis_parser.py  osis_utilities.py  parser.py  sandbox.py  util.py
pythonbible_parser/osis/versions/: README.md
pythonbible_parser/usfm/: usfm_parser.py
tests/: bible_data_test.py  bible_test.py  conftest.py  old_osis_parser_test.py  osis_constants_test.py  osis_parser_test.py  profiler.py  profiler_test.py  public_domain_versions_test.py  test_osis_constants.py  test_osis_parser.py
tests/data/public-domain-versions/: README.md
tests/data/public-domain-versions/en/: bwe.xml  diaglot.xml  etheridge.xml  lont.xml  mont.xml  oeb.xml  rylt.xml  tce.xml  tyndale.xml  wesley.xml  wmth.xml
