[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pythonbible_parser"
author = "Nathan Patton"
author-email = "npatton@gmail.com"
home-page = "https://github.com/avendesora/pythonbible-parser"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]
requires = [
    "defusedxml >=0.7.1",
    "pythonbible ==0.13.1",
]
description-file = "README.md"
requires-python = ">=3.8"

[tool.flit.metadata.urls]
Documentation = "https://github.com/avendesora/pythonbible-parser"
Source = "https://github.com/avendesora/pythonbible-parser"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=7.1.2",
    "pytest-cov >=3.0.0",
]
doc = [
]
dev = [
    "pre-commit >=2.20.0",
]
all = [
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "T10",
    "T20",
    "W",
]
ignore = [
    "ANN401",
    "COM812",  # causes conflicts with the formmatter
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D205",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FBT003",
    "ISC001",  # causes conflicts with the formmatter
]

[tool.ruff.lint.per-file-ignores]
"pythonbible_parser/osis/old_osis_parser.py" = ["B019", "PLR0913"]
"pythonbible_parser/osis/osis_book_parser.py" = ["C901", "PLR0913"]
"pythonbible_parser/osis/osis_parser.py" = ["PLR0913"]
"tests/*.py" = ["S101"]
"tests/bible_data_test.py" = ["ERA001"]
"tests/conftest.py" = ["E501", "RUF"]
"tests/public_domain_versions_test.py" = ["ERA001"]
# TODO - remove this once code is fully implemented
"pythonbible_parser/usfm/usfm_parser.py" = ["ANN001", "ANN101", "D105", "D107", "T201"]

[tool.ruff.lint.isort]
force-single-line = true
